# myshop

./: Dockerfile  README.md  pyproject.toml  requirements.txt
cart/: forms.py  views.py
cart/templates/cart/: detail.html
myshop/: settings.py  urls.py
orders/: admin.py  models.py  views.py
orders/migrations/: 0001_initial.py  0002_remove_order_braintree_id.py
orders/templates/orders/admin/orders/: detail.html
orders/templates/orders/order/: create.html  created.html
shop/: admin.py  context_processors.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_useripstore.py  0003_delete_useripstore.py  0004_alter_product_image.py  0005_alter_product_options_alter_product_created.py  0006_alter_product_created.py  0007_alter_product_created.py  0008_alter_product_index_together.py  0009_alter_product_index_together.py  0010_alter_product_index_together.py  0011_alter_product_name.py  0012_alter_product_index_together.py  0013_alter_product_index_together_alter_product_name.py  0014_alter_product_category.py  0015_alter_product_category.py  0016_alter_product_index_together.py  0017_alter_product_index_together.py  0018_alter_product_category.py  0019_alter_product_category.py
shop/static/css/: style.css
shop/templates/shop/: about.html  base.html
shop/templates/shop/product/: detail.html  list.html
