[tool.poetry]
name = "myshop"
version = "0.1.0"
description = ""
authors = ["Maksim Surus <surus@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
Pillow = "^9.0.1"
dj-database-url = "^0.5.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
whitenoise = "^6.0.0"
python-decouple = "^3.6"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
